--- a/index.html
+++ b/index.html
@@ -3,51 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Krutik Vanjara</title>
+    <title>My Profile</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Krutik Vanjara</h1>
-            <p>9724773880 | <a href="mailto:krutikvanjara3880@gmail.com">krutikvanjara3880@gmail.com</a> | <a href="https://www.linkedin.com/krutik-vanjara" target="_blank">LinkedIn</a></p>
-        </header>
-        <section class="profile-summary">
-            <h2>Profile Summary</h2>
-            <p>As a recent Master’s graduate in Physics, I possess intermediate skills in electronics and circuit simulation, utilizing software like Fritzing and Multisim. I have basic proficiency in Arduino programming and Python, applied to various electronic projects. Eager to delve deeper into IoT, product development, and control systems, I am a collaborative problem-solver dedicated to expanding my electronics expertise.</p>
+    <header>
+        <h1>Welcome to My Profile</h1>
+        <p>I'm Krutik Vanjara, a recent Master's graduate in Physics.</p>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Brief description about yourself, your interests, and skills.</p>
         </section>
-        <section class="education">
-            <h2>Education</h2>
-            <ul>
-                <li><strong>St. Xavier’s College Ahmedabad</strong> - Master of Science (July 2021 - May 2023)</li>
-                <li><strong>Uka Tarsadia University Bardoli, Surat</strong> - Bachelor of Science (Applied Physics) (July 2018 - May 2021)</li>
-                <li><strong>Shri Saraswat Vidhyalay Vapi, Valsad</strong> - Higher Secondary School Certificate (July 2016 - March 2018)</li>
-                <li><strong>S.J. Gulabchand Sarvajanik High School Khatttalvada, Valsad</strong> - Secondary School Certificate (July 2015 - March 2016)</li>
-            </ul>
-        </section>
-        <section class="projects">
+        <section id="projects">
             <h2>Projects</h2>
-            <p><strong>Mapping and Visualization of Magnetic Fields using Arduino and Hall Effect Sensor</strong> (January 2023)</p>
-            <ul>
-                <li>Designed and implemented an IoT project using an Arduino board, a Hall Effect Sensor, and a Pyserial Library.</li>
-                <li>Utilized Pyserial library to establish communication between the system and computer.</li>
-                <li>Created visual representations of magnetic fields using Python libraries such as Matplotlib.</li>
-                <li>Demonstrated skills in programming, electronics, and data visualization through the project.</li>
-            </ul>
+            <p>List of your projects with links and descriptions.</p>
         </section>
-        <section class="skills">
-            <h2>Skills</h2>
-            <p><strong>Hard Skills:</strong> C, Python, Microsoft Excel & PowerPoint, Google Docs and Sheets, Fritzing, LTspice, Multisim, ArduinoIDE, Overleaf.</p>
-            <p><strong>Libraries:</strong> NumPy, Matplotlib, Pyserial.</p>
-            <p><strong>Soft Skills:</strong> Communication, Critical thinking, Problem-solving, Teamwork, Adaptability, Working under pressure.</p>
-            <p><strong>Languages:</strong> Gujarati (Mother tongue), Hindi (fluent), English.</p>
+        <section id="contact">
+            <h2>Contact Me</h2>
+            <p>Email: <a href="mailto:krutikvanjara3880@gmail.com">krutikvanjara3880@gmail.com</a></p>
         </section>
-        <section class="hobbies">
-            <h2>Hobbies & Interests</h2>
-            <p><strong>Sports:</strong> Cricket, Volleyball.</p>
-            <p><strong>Technical:</strong> Arduino model making, Staying up-to-date with the latest trends in Semiconductor Manufacturing and Electronics, Learning about data analysis.</p>
-        </section>
-    </div>
+    </main>
+    <footer>
+        <p>&copy; 2024 Krutik Vanjara</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
+
