--- a/index.html
+++ b/index.html
@@ -8,13 +8,21 @@
 </head>
 <body>
     <header>
+        <img src="path/to/your/profile-image.jpg" alt="Profile Image" class="profile-img">
         <h1>Welcome to My Profile</h1>
-        <p>I'm Krutik Vanjara, a recent Master's graduate in Physics.</p>
+        <p>I love exploring technology and innovation.</p>
+        <div class="contact-icons">
+            <a href="https://www.linkedin.com/in/yourprofile" target="_blank">🔗</a>
+            <a href="mailto:krutikvanjara3880@gmail.com">✉️</a>
+            <a href="https://www.instagram.com/yourprofile" target="_blank">📷</a>
+        </div>
     </header>
     <nav>
         <ul>
             <li><a href="#about">About Me</a></li>
+            <li><a href="#academic">Academic Background</a></li>
             <li><a href="#projects">Projects</a></li>
+            <li><a href="#pet-projects">Pet Projects</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -23,9 +31,35 @@
             <h2>About Me</h2>
             <p>Brief description about yourself, your interests, and skills.</p>
         </section>
+        <section id="academic">
+            <h2>Academic Background</h2>
+            <div class="academic-entry">
+                <h3>Master of Science in Physics</h3>
+                <p>St. Xavier’s College Ahmedabad | July 2021 - May 2023</p>
+            </div>
+            <div class="academic-entry">
+                <h3>Bachelor of Science (Applied Physics)</h3>
+                <p>Uka Tarsadia University Bardoli, Surat | July 2018 - May 2021</p>
+            </div>
+            <!-- Add more academic entries here -->
+        </section>
         <section id="projects">
             <h2>Projects</h2>
-            <p>List of your projects with links and descriptions.</p>
+            <div class="project-entry">
+                <h3>Mapping and Visualization of Magnetic Fields</h3>
+                <p>Duration: January 2023 - Present</p>
+                <p>Description: Developed an IoT project using Arduino and Hall Effect Sensor.</p>
+            </div>
+            <!-- Add more project entries here -->
+        </section>
+        <section id="pet-projects">
+            <h2>Pet Projects</h2>
+            <div class="pet-project-entry">
+                <h3>Pet Project Example</h3>
+                <p>Duration: TBD</p>
+                <p>Description: Brief description of your pet project.</p>
+            </div>
+            <!-- Add more pet project entries here -->
         </section>
         <section id="contact">
             <h2>Contact Me</h2>
@@ -33,10 +67,11 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Krutik Vanjara</p>
+        <p>Everything is connected.</p>
     </footer>
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
