--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="path/to/your/profile-image.jpg" alt="Profile Image" class="profile-img">
+        <img src="profile-image.jpeg" alt="Profile Image" class="profile-img">
         <h1>Welcome to My Profile</h1>
         <p>I love exploring technology and innovation.</p>
         <div class="contact-icons">
@@ -72,6 +72,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
