--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <h1>Welcome to My Profile</h1>
         <p>I love exploring technology and innovation.</p>
         <div class="contact-icons">
-            <a href="https://www.linkedin.com/in/yourprofile" target="_blank">🔗</a>
+            <a href="https://www.linkedin.com/in/krutik-vanjara-4a74b2204/" target="_blank">🔗</a>
             <a href="mailto:krutikvanjara3880@gmail.com">✉️</a>
-            <a href="https://www.instagram.com/yourprofile" target="_blank">📷</a>
+            <a href="https://www.instagram.com/krutik_vanjara/" target="_blank">📷</a>
         </div>
     </header>
     <nav>
