--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 <body>
     <header>
         <img src="profile-image.jpeg" alt="Profile Image" class="profile-img">
-        <h1>Welcome to My Profile</h1>
-        <p>I love exploring technology and innovation.</p>
-        <div class="contact-icons">
-            <a href="https://www.linkedin.com/in/krutik-vanjara-4a74b2204/" target="_blank">🔗</a>
-            <a href="mailto:krutikvanjara3880@gmail.com">✉️</a>
-            <a href="https://www.instagram.com/krutik_vanjara/" target="_blank">📷</a>
+        <div class="header-info">
+            <h1>Krutik Vanjara</h1>
+            <p>I love exploring technology and innovation.</p>
+            <div class="contact-icons">
+                <a href="https://www.linkedin.com/in/yourprofile" target="_blank"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+                <a href="mailto:krutikvanjara3880@gmail.com"><img src="gmail-icon.png" alt="Gmail"></a>
+                <a href="https://outlook.live.com/owa/?path=/mail/inbox" target="_blank"><img src="outlook-icon.png" alt="Outlook"></a>
+                <a href="https://www.instagram.com/yourprofile" target="_blank"><img src="instagram-icon.png" alt="Instagram"></a>
+            </div>
         </div>
     </header>
     <nav>
@@ -23,7 +26,7 @@
             <li><a href="#academic">Academic Background</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#pet-projects">Pet Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#downloads">Downloads</a></li>
         </ul>
     </nav>
     <main>
@@ -61,9 +64,16 @@
             </div>
             <!-- Add more pet project entries here -->
         </section>
-        <section id="contact">
-            <h2>Contact Me</h2>
-            <p>Email: <a href="mailto:krutikvanjara3880@gmail.com">krutikvanjara3880@gmail.com</a></p>
+        <section id="downloads">
+            <h2>Downloads</h2>
+            <div class="download-section">
+                <a href="your-resume.pdf" class="download-link" download>
+                    <img src="download-icon.png" alt="Download Resume"> Resume
+                </a>
+                <a href="your-cover-letter.pdf" class="download-link" download>
+                    <img src="download-icon.png" alt="Download Cover Letter"> Cover Letter
+                </a>
+            </div>
         </section>
     </main>
     <footer>
@@ -72,6 +82,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
