--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         <p>I love exploring technology and innovation.</p>
         <div class="contact-icons">
             <a href="https://www.linkedin.com/in/yourprofile" target="_blank">
-                <img src="linkedin-logo.png" alt="LinkedIn" class="social-icon">
+                <img src="linkedin-logo.svr" alt="LinkedIn" class="social-icon">
             </a>
             <a href="mailto:your-email@gmail.com" target="_blank">
-                <img src="gmail-logo.png" alt="Gmail" class="social-icon">
+                <img src="gmail-logo.svr" alt="Gmail" class="social-icon">
             </a>
             <a href="mailto:your-email@outlook.com" target="_blank">
-                <img src="outlook-logo.png" alt="Outlook" class="social-icon">
+                <img src="outlook-logo.svr" alt="Outlook" class="social-icon">
             </a>
             <a href="https://www.instagram.com/yourprofile" target="_blank">
-                <img src="instagram-logo.png" alt="Instagram" class="social-icon">
+                <img src="instagram-logo.svr" alt="Instagram" class="social-icon">
             </a>
             <a href="https://github.com/yourgithubusername" target="_blank">
-                <img src="github-logo.png" alt="GitHub" class="social-icon">
+                <img src="github-logo.svr" alt="GitHub" class="social-icon">
             </a>
         </div>
     </header>
@@ -74,10 +74,10 @@
             <h2>Downloads</h2>
             <p>
                 <a href="path/to/resume.pdf" target="_blank">
-                    <img src="download-logo.png" alt="Download Resume" class="download-icon"> Resume
+                    <img src="download-logo.svr" alt="Resume" class="download-icon"> Resume
                 </a>
                 <a href="path/to/cover-letter.pdf" target="_blank">
-                    <img src="download-logo.png" alt="Download Cover Letter" class="download-icon"> Cover Letter
+                    <img src="download-logo.svr" alt="Cover Letter" class="download-icon"> Cover Letter
                 </a>
             </p>
         </section>
