--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
             </a>
         </div>
     </header>
-
+    <nav>
+        <ul>
+            <li><a href="#academic-background">Academic Background</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#pet-projects">Pet Projects</a></li>
+            <li><a href="#downloads">Downloads</a></li>
+        </ul>
+    </nav>
+  <main>
     <section id="about">
         <h2>About Me</h2>
         <p>I'm passionate about technology, electronics, and innovation. My goal is to contribute to projects that make a difference in the world.</p>
@@ -74,7 +82,7 @@
             <img src="download-logo.svg" alt="Download Cover Letter" class="download-icon"> Cover Letter
         </a>
     </section>
-
+  </main>
     <footer>
         <p>everything is connected</p>
     </footer>
