--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </header>
     <nav>
         <ul>
+             <li><a href="#about-me">About Me</a></li>
             <li><a href="#academic-background">Academic Background</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#pet-projects">Pet Projects</a></li>
