--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <img src="profile-image.jpeg" alt="Profile Image" class="profile-img">
-        <h1>Welcome to My Profile</h1>
-        <p>I'm Krutik Vanjara, a recent Master's graduate in Physics. I love exploring technology and innovation.</p>
+        <h1>Krutik Vanjara</h1>
+        <p>Excited to learn,explore and stay curious for life!</p>
         <div class="contact-icons">
             <a href="https://www.linkedin.com/in/yourprofile" target="_blank">
                 <img src="linkedin-logo.svg" alt="LinkedIn" class="social-icon">
@@ -85,7 +85,7 @@
         </section>
     </main>
     <footer>
-        <p>everything is connected</p>
+        <p>Everything is connected 🙂</p>
     </footer>
 
     <script src="script.js"></script>
