--- a/index.html
+++ b/index.html
@@ -3,32 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Profile</title>
+    <title>Krutik Vanjara</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <img src="profile-image.jpeg" alt="Profile Image" class="profile-img">
-        <h1>Krutik Vanjara</h1>
-        <p>Excited to learn,explore and stay curious for life!</p>
-        <div class="contact-icons">
-            <a href="https://www.linkedin.com/in/yourprofile" target="_blank">
-                <img src="linkedin-logo.svg" alt="LinkedIn" class="social-icon">
-            </a>
-            <a href="mailto:your-email@gmail.com" target="_blank">
-                <img src="gmail-logo.svg" alt="Gmail" class="social-icon">
-            </a>
-            <a href="mailto:your-email@outlook.com" target="_blank">
-                <img src="outlook-logo.svg" alt="Outlook" class="social-icon">
-            </a>
-            <a href="https://www.instagram.com/yourprofile" target="_blank">
-                <img src="instagram-logo.svg" alt="Instagram" class="social-icon">
-            </a>
-            <a href="https://github.com/yourgithubusername" target="_blank">
-                <img src="github-logo.svg" alt="GitHub" class="social-icon">
-            </a>
+    <!-- Header section similar to the reference design -->
+    <div id="dhead" class="container">
+        <div class="row">
+            <div id="dpic">
+                <img src="profile-image.jpeg" class="ppic" alt="Profile Image" />
+            </div>
+            <div id="ddesc">
+                <h1>Krutik Vanjara</h1>
+                <h2>Excited to learn, explore, and stay curious for life! 🧠🚀🌍</h2>
+                <div id="dico">
+                    <a href="https://www.linkedin.com/in/yourprofile" target="_blank">
+                        <img src="linkedin-logo.svg" class="iico" alt="LinkedIn" />
+                    </a>
+                    <a href="mailto:your-email@gmail.com" target="_blank">
+                        <img src="gmail-logo.svg" class="iico" alt="Gmail" />
+                    </a>
+                    <a href="mailto:your-email@outlook.com" target="_blank">
+                        <img src="outlook-logo.svg" class="iico" alt="Outlook" />
+                    </a>
+                    <a href="https://www.instagram.com/yourprofile" target="_blank">
+                        <img src="instagram-logo.svg" class="iico" alt="Instagram" />
+                    </a>
+                    <a href="https://github.com/yourgithubusername" target="_blank">
+                        <img src="github-logo.svg" class="iico" alt="GitHub" />
+                    </a>
+                </div>
+            </div>
         </div>
-    </header>
+    </div>
+
     <nav>
         <ul>
             <li><a href="#about">About Me</a></li>
@@ -38,6 +46,7 @@
             <li><a href="#downloads">Downloads</a></li>
         </ul>
     </nav>
+
     <main>
         <section id="about">
             <h2>About Me</h2>
@@ -84,6 +93,7 @@
             </a>
         </section>
     </main>
+
     <footer>
         <p>Everything is connected 🙂</p>
     </footer>
@@ -91,6 +101,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
