--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Header section similar to the reference design -->
     <header>
         <div id="dpic">
             <img src="profile-image.jpeg" class="ppic" alt="Profile Image" />
@@ -16,26 +15,25 @@
             <h1>Krutik Vanjara</h1>
             <h2>Excited to learn, explore, and stay curious for life! 🧠🚀🌍</h2>
             <div id="dico">
-                <a href="https://www.linkedin.com/in/yourprofile" target="_blank">
+                <a href="https://www.linkedin.com/in/yourprofile" target="_blank" aria-label="LinkedIn">
                     <img src="linkedin-logo.svg" class="iico" alt="LinkedIn" />
                 </a>
-                <a href="mailto:your-email@gmail.com" target="_blank">
+                <a href="mailto:your-email@gmail.com" target="_blank" aria-label="Gmail">
                     <img src="gmail-logo.svg" class="iico" alt="Gmail" />
                 </a>
-                <a href="mailto:your-email@outlook.com" target="_blank">
+                <a href="mailto:your-email@outlook.com" target="_blank" aria-label="Outlook">
                     <img src="outlook-logo.svg" class="iico" alt="Outlook" />
                 </a>
-                <a href="https://www.instagram.com/yourprofile" target="_blank">
+                <a href="https://www.instagram.com/yourprofile" target="_blank" aria-label="Instagram">
                     <img src="instagram-logo.svg" class="iico" alt="Instagram" />
                 </a>
-                <a href="https://github.com/yourgithubusername" target="_blank">
+                <a href="https://github.com/yourgithubusername" target="_blank" aria-label="GitHub">
                     <img src="github-logo.svg" class="iico" alt="GitHub" />
                 </a>
             </div>
         </div>
     </header>
 
-    <!-- Navigation -->
     <nav>
         <ul>
             <li><a href="#about">About Me</a></li>
@@ -84,10 +82,10 @@
 
         <section id="downloads">
             <h2>Downloads</h2>
-            <a href="path/to/resume.pdf" target="_blank">
+            <a href="path/to/resume.pdf" target="_blank" aria-label="Download Resume">
                 <img src="download-logo.svg" alt="Download Resume" class="download-icon"> Resume
             </a>
-            <a href="path/to/cover-letter.pdf" target="_blank">
+            <a href="path/to/cover-letter.pdf" target="_blank" aria-label="Download Cover Letter">
                 <img src="download-logo.svg" alt="Download Cover Letter" class="download-icon"> Cover Letter
             </a>
         </section>
@@ -100,6 +98,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
